index modificado para sass

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/bootstrap-icons-1.8.1/bootstrap-icons.css">
 
     <!-- CSS Propio -->
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="css/main.css">
     
 
 
